# purs-localdocs

./: LICENSE  README.md  purs-localdocs.cabal  stack.yaml
app/: Main.hs
