name:                purs-localdocs
version:             0.0.0.1
synopsis:            PureScript local documentation generation.
-- description:
homepage:            https://github.com/matthewleon/purs-localdocs#readme
license:             MIT
license-file:        LICENSE
author:              Matthew Leon
maintainer:          ml@matthewleon.com
copyright:           2017 Matthew Leon
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable purs-localdocs
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , errors
                     , text
                     , process
                     , process-extras
                     , semver
                     , Glob
                     , mtl
                     , deepseq
                     , safe
                     , containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/purs-localdocs
